--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     index index.php index.html;
-    server_name 167.172.72.132;
+    server_name YOUR_SERVER_IP;
     rewrite_log on;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
